# chris-martin.org

./: .gitignore  CNAME  Makefile  cabal.project  default.nix  deploy.bash  flake.nix  index.html  readme.md  shell.nix  stack.yaml  watch.sh
.github/workflows/: deploy.yml
2006/: the-great-macropod-exodus
2008/: fun-with-find  kernels-vectors-graphs  last-minute-math  smalltalk-go-away
2009/: a-mathematicians-lament  randomization-pipeline
2010/: javac-bug-report
2012/: bunny-vine
2013/: correctness-scala  georgia-tech  pencil-effects  the-little-libraries
2014/: such-commit-wow  unwanted-haskell-triangle
2015/: adjacency  dynamic-typing  gradle-scala-repl  installing-nixos  intro-scala-pitfalls
2016/: installing-nix-package-manager  nixos-on-digitalocean
_posts/: 2009-06-20-randomization-pipeline.md  2014-09-13-extending-scala-collections.md  2015-09-03-static.md  2016-10-17-random-lazy-scoring.md
chris-martin-org/: chris-martin-org.cabal  default.nix
chris-martin-org/src/ChrisMartinOrg/: Content.hs  Core.hs
chris-martin-org/src/ChrisMartinOrg/Content/: Parse.hs
hackage/rss/: 3000.2.0.7.nix
hs/: chris-martin-org.cabal  package.yaml
hs/src/: ChrisMartinOrg.hs
hs/src/ChrisMartinOrg/: Content.hs  Core.hs  Css.hs  Hash.hs  Home.hs  Html.hs  MarkupLanguage.hs  Post.hs  PostDate.hs  RSS.hs  Redirect.hs
hs/src/ChrisMartinOrg/Content/: Parse.hs
hs/src/ChrisMartinOrg/Post/: Page.hs  Parse.hs
hs/test/: test.hs
in/: global.scss
in/home/: content.md  home.scss
in/posts/: post.nix  post.scss
in/posts/2006-macropod/: post.bricks  post.md
in/posts/2008-04-find/: post.bricks
in/posts/2008-05-smalltalk/: post.bricks  post.md
in/posts/2008-09-kernels/: post.bricks  post.md
in/posts/2008-11-last-minute/: post.bricks
in/posts/2009-06-19-math-lament/: post.bricks  post.md
in/posts/2009-06-20-randomization/: post.bricks  post.md
in/posts/2010-javac-bug/: post.bricks
in/posts/2012-bunny-vine/: post.bricks
in/posts/2013-08-pencil/: post.bricks
in/posts/2013-10-correctness/: post.bricks
in/posts/2013-11-little-libs/: post.bricks  post.md
in/posts/2013-12-georgia-tech/: post.bricks
in/posts/2014-01-such-commit/: post.bricks  post.md  post.nix
in/posts/2014-08-haskell-triangle/: post.bricks  post.md
in/posts/2015-03-adjacency/: post.bricks  post.nix
in/posts/2015-08-08-gradle-scala/: post.bricks  post.nix
in/posts/2015-08-09-dynamic-typing/: post.bricks  post.md
in/posts/2015-08-24-scala-pitfalls/: post.bricks  post.md
in/posts/2015-09-installing-nixos/: post.bricks  post.md
in/posts/2016-08-31-installing-nix/: post.bricks  post.md
in/posts/2016-10-05-nixos-digitalocean/: post.bricks
in/posts/2017-02-18-ghc-pr/: post.nix
in/posts/2017-02-20-water-monoids/: post.bricks
in/posts/2017-02-24-nix-for-stack-users/: post.bricks
in/posts/2017-03-12-acme-functors/: post.bricks
in/posts/2017-04-24-what-is-a-leak/: post.bricks
in/posts/2017-04-29-null-as-bottom/: post.bricks
in/posts/2017-05-10-loc/: post.bricks
in/posts/2017-08-27-elephant/: post.bricks
in/posts/2017-10-18-interfaces-records/: post.bricks  post.md
in/posts/2017-12-15-wrap/: post.md
in/posts/2017-12-24-linked-list/: post.md
in/posts/2018-01-16-path/: path.css  post.md
in/posts/2018-03-22-white-elephant/: post.md
in/posts/2018-04-24-path/: post.md
in/posts/2018-10-20-word-problems/: post.md  word-problems.css
in/posts/2019-03-09-maybe-death/: post.md
in/posts/2019-05-25-diamond/: post.md
in/posts/2019-06-16-monad-is-io/: post.md
in/posts/2019-07-18-why-paper/: post.md
in/posts/2019-09-within-the-lines/: post.md
in/posts/2019-10-commit-history/: post.md
in/posts/2020-01-forever-skillet/: post.md
in/posts/2020-02-in-the-computer/: post.md
in/posts/2021-06-01-garden-thinking/: post.md
in/posts/2022-01-free-software/: post.md
in/posts/2022-11-15-a-thread/: post.md
in/posts/2022-11-16-packages/: post.md
in/posts/2022-11-16-z-drying-rod/: post.md
in/posts/2022-11-17-niv/: post.md
in/posts/2022-11-17-problems-with-products/: Post.lhs  post.cabal  post.md
in/posts/2022-11-18-problems-with-products-2/: cabal.project.local
in/posts/2022-12-30-art/: post.md
in/posts/2022-12-30-niv/: post.md
in/posts/2024-05-hard-reality/: post.md
in/posts/2024-07-22-games/: post.md
in/posts/2025-02-dickbong/: post.md
in/posts/products-3/: Post.lhs  post.cabal  post.md
in/posts/unpublished-functors/: Post.lhs  cabal.project  post.cabal
(+3 files in other folders)
