cabal-version: 3.0

name: chris-martin-org
version: 0.1.0.0
homepage: https://github.com/chris-martin/chris-martin.org
bug-reports: https://github.com/chris-martin/chris-martin.org/issues
license: Apache-2.0
build-type: Simple

source-repository head
  type: git
  location: https://github.com/chris-martin/chris-martin.org

common base
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        attoparsec
      , base ^>= 4.14
      , blaze-html
      , blaze-markup
      , bytestring
      , containers
      , cryptonite
      , directory
      , filepath
      , highlighting-kate
      , hsass
      , markdown
      , network-uri
      , relude
      , rss
      , safe
      , text
      , time
      , typed-process
      , unix

library
    import: base
    hs-source-dirs: src
    exposed-modules:
        ChrisMartinOrg
        ChrisMartinOrg.Content
        ChrisMartinOrg.Content.Parse
        ChrisMartinOrg.Core
        ChrisMartinOrg.Css
        ChrisMartinOrg.Hash
        ChrisMartinOrg.Home
        ChrisMartinOrg.Post
        ChrisMartinOrg.PostDate
        ChrisMartinOrg.Post.Page
        ChrisMartinOrg.Post.Parse
        ChrisMartinOrg.Redirect
        ChrisMartinOrg.RSS
    other-modules:
        Paths_chris_martin_org

executable site
    import: base
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
        base
      , chris-martin-org
    other-modules:
        Paths_chris_martin_org
