cabal-version: 3.0

name:           chris-martin-org
version:        0.1.0.0
homepage:       https://github.com/chris-martin/chris-martin.org#readme
bug-reports:    https://github.com/chris-martin/chris-martin.org/issues
license:        Apache-2.0
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/chris-martin/chris-martin.org

common base
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      attoparsec
    , base
    , blaze-html
    , blaze-markup
    , bytestring
    , containers
    , cryptonite
    , directory
    , filepath
    , highlighting-kate
    , markdown
    , network-uri
    , relude
    , rss
    , safe
    , text
    , time
    , typed-process
    , unix

library
  import: base
  hs-source-dirs: src
  exposed-modules:
      ChrisMartinOrg
      ChrisMartinOrg.Content
      ChrisMartinOrg.Content.Parse
      ChrisMartinOrg.Core
      ChrisMartinOrg.Css
      ChrisMartinOrg.Hash
      ChrisMartinOrg.Home
      ChrisMartinOrg.Post
      ChrisMartinOrg.PostDate
      ChrisMartinOrg.Post.Page
      ChrisMartinOrg.Post.Parse
      ChrisMartinOrg.Redirect
      ChrisMartinOrg.RSS

executable site
  import: base
  main-is: Main.hs
  hs-source-dirs: app
  build-depends: chris-martin-org

test-suite test
  import: base
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs: test
  build-depends:
      chris-martin-org
    , HUnit
    , test-framework
    , test-framework-hunit
