cabal-version: 3.0

name: post
version: 0

library
    default-language: GHC2021
    exposed-modules: Post
    build-depends: base, containers, optparse-applicative
    hs-source-dirs: .
    default-extensions:
        BlockArguments
        DefaultSignatures
        FunctionalDependencies
        LambdaCase
        OverloadedLists
        QuantifiedConstraints
        TypeFamilies
        UndecidableInstances
