cabal-version: 3.0

name: post
version: 0

library
    default-language: GHC2021
    exposed-modules: Post
    build-depends: base, containers, optparse-applicative
    hs-source-dirs: .
    default-extensions:
        ApplicativeDo
        BlockArguments
        DerivingStrategies
        DuplicateRecordFields
        LambdaCase
        OverloadedLists
        TypeFamilies
